--- a/html/popup.html
+++ b/html/popup.html
@@ -133,7 +133,7 @@
     </div>
     <div id="acc_transfers">
         <div class="back_menu back_enabled">Wallet History</div>
-        <div id="transfer_rows"></div>
+        <div id="transfer_rows" class="no-scrollbar"></div>
     </div>
     <div id="add_account_div">
         <div class="back_menu back_enabled">Set up</div>
@@ -426,7 +426,7 @@
     <div id="tokens_settings_div">
         <div class="back_enabled ">Tokens Available</div>
         <p>View token information and chose which tokens to display. Learn more about custom tokens on the Steem blockchain at <a href="https://steem-engine.com" target="_blank">https://steem-engine.com</a>.</p>
-        <div id="existing_tokens">
+        <div id="existing_tokens" class="no-scrollbar">
         </div>
     </div>
     <div id="token_send_div">
@@ -450,7 +450,7 @@
         <div class="loader" id="loading_history_token" style="display:none">
             <div><img src="../images/loading.gif" /></div>
         </div>
-        <div id="history_tokens_rows"></div>
+        <div id="history_tokens_rows" class="no-scrollbar"></div>
     </div>
     <div id="powerup_div">
         <div class="back_enabled back_menu">Power Up</div>
