--- a/html/popup.html
+++ b/html/popup.html
@@ -136,25 +136,43 @@
         <div id="transfer_rows"></div>
     </div>
     <div id="add_account_div">
-        <div class="back_menu back_enabled">Set up</div>
-        <p>Enter your Steem account name and either the master password or the private
-            posting or active key for that account below. Your master password will
-            NOT be saved and will only be used to generate your private keys.
-            <br/><br/> You may add / remove Steem accounts or keys at any time. If
-            you need to create a new Steem account, you can do so at
-            <a href="https://signup.steemit.com/" target="_blank" style="text-decoration: underline; color: white;">https://signup.steemit.com/</a>.
-        </p>
-
-        <div class="input_container">
-            <input type="text" id="username" placeholder="Username"></input>
-            <img src="../images/arobase.png" class="input_img" />
-        </div>
-        <div class="input_container">
-            <input type="password" id="pwd" placeholder="Private key"></input>
-            <img src="../images/key.png" class="input_img" />
-        </div>
-        <button id="check_add_account">Import keys</button>
+      <div class="back_menu back_enabled">Add account</div>
+      <p>You may add an existing account or puchase / redeem one via Steem Ninja.</p>
+      <button id="button_add_existing_account">Import Account</button>
+      <button id="button_add_new_account">Purchase Account</button>
     </div>
+    <div id="add_new_account_div">
+      <div class="back_enabled">Purchase Account</div>
+      <p>Enter the username of the account you are wishing to purchase.<br>You will be redirected to Steem Ninja to confirm a transaction of $2.50.</p>
+      <div class="input_container">
+          <input type="text" id="username_ninja" placeholder="Username"></input>
+          <img src="../images/arobase.png" class="input_img" />
+      </div>
+      <button id="purchase_account">Continue on Steem Ninja</button>
+      <div class="loader" id="loading_purchase" style="display:none">
+          <div><img src="../images/loading.gif" /></div>
+      </div>
+    </div>
+    <div id="add_existing_account_div">
+      <div class="back_enabled">Set up</div>
+      <p>Enter your Steem account name and either the master password or the private
+          posting or active key for that account below. Your master password will
+          NOT be saved and will only be used to generate your private keys.
+          <br/><br/> You may add / remove Steem accounts or keys at any time. If
+          you need to create a new Steem account, you can do so at
+          <a href="https://signup.steemit.com/" target="_blank" style="text-decoration: underline; color: white;">https://signup.steemit.com/</a>.
+      </p>
+      <div class="input_container">
+          <input type="text" id="username" placeholder="Username"></input>
+          <img src="../images/arobase.png" class="input_img" />
+      </div>
+      <div class="input_container">
+          <input type="password" id="pwd" placeholder="Private key"></input>
+          <img src="../images/key.png" class="input_img" />
+      </div>
+      <button id="check_add_account">Import keys</button>
+    </div>
+
     <div id="master_check">
         <div class="back_add_key back_enabled">Import Keys</div>
         <p>Import successful! <br><br>Please select the Keys you wish to store with
@@ -578,6 +596,7 @@
     <script src="../vendor/steemjs.js"></script>
     <script src="../vendor/md5.min.js"></script>
     <script src="../vendor/cryptojs.min.js"></script>
+    <script src="../vendor/steem.ninja.min.js"></script>
     <script src="../vendor/axios.min.js"></script>
     <script src="../vendor/sscjs.js"></script>
     <script src="../js/encrypt.js"></script>
@@ -591,6 +610,7 @@
     <script src="../js/popup/delegate.js"></script>
     <script src="../js/popup/power.js"></script>
     <script src="../js/popup/tokens.js"></script>
+    <script src="../js/popup/ninja.js"></script>
     <script src="../js/popup/popup.js"></script>
 </body>
 
