Add VP and Bandwidth + load dTube account + save dTube accounts as last account

--- a/html/popup.html
+++ b/html/popup.html
@@ -64,16 +64,18 @@
             <div id="voting_power_inner">
                 <div id="vm_div">
                     <div>
-                        <span>Voting Mana</span>
-                        <img id="vm_info" src="../images/icon_info_white.png" />
+                        <span class="steem">Voting Mana</span>
+                        <span class="dtube">Voting Power</span>
+                        <img class="steem"id="vm_info" src="../images/icon_info_white.png" />
                     </div>
                     <div id="vm">...
                     </div>
                 </div>
                 <div>
                     <div>
-                        <span>Resource credits</span>
-                        <img id="rc_info" src="../images/icon_info_white.png" />
+                        <span class="steem">Resource credits</span>
+                        <span class="dtube">Bandwidth</span>
+                        <img class="steem" id="rc_info" src="../images/icon_info_white.png" />
                     </div>
                     <div id="rc">...
                     </div>
