Finalize Send Transfers and History

--- a/html/popup.html
+++ b/html/popup.html
@@ -444,7 +444,7 @@
         </div>
         <div id="send_dtube_form">
             <div class="input_container">
-                <input id="recipient" autocomplete="off" placeholder="USERNAME" />
+                <input id="recipient_dtube" autocomplete="off" placeholder="USERNAME" />
                 <img src="../images/arobase.png" class="input_img" />
             </div>
             <div id="autocomplete_dtube_container"></div>
@@ -452,6 +452,7 @@
             <div class="sp_del">
                 DTC
             </div>
+            <input type="text" placeholder="MEMO (optional)" id="memo_send_dtube" />
             <button id="send_transfer_dtube">Send</button>
         </div>
     </div>
