add dtube rewards

--- a/html/popup.html
+++ b/html/popup.html
@@ -518,6 +518,12 @@
         <div id="tokens_list">
         </div>
     </div>
+    <div id="rewards_div">
+        <div class="back_enabled back_menu">Rewards</div>
+        <p></p>
+        <div id="rewards_list">
+        </div>
+    </div>
     <div id="tokens_settings_div">
         <div class="back_enabled ">Tokens Available</div>
         <p>View token information and chose which tokens to display. Learn more about custom tokens on the Steem blockchain at <a href="https://steem-engine.com" target="_blank">https://steem-engine.com</a>.</p>
@@ -677,6 +683,7 @@
     <script src="../vendor/ssc.min.js"></script>
     <script src="../vendor/javalon.min.js"></script>
     <script src="../vendor/jquery-autocomplete.min.js"></script>
+    <script src="../vendor/jquery-timeago.min.js"></script>
     <script src="../js/encrypt.js"></script>
     <script src="../js/popup/com.js"></script>
     <script src="../js/popup/rpc.js"></script>
@@ -689,6 +696,7 @@
     <script src="../js/popup/power.js"></script>
     <script src="../js/config.js"></script>
     <script src="../js/popup/tokens.js"></script>
+    <script src="../js/popup/rewards.js"></script>
     <script src="../js/popup/popup.js"></script>
 </body>
 
