Only show arrow when necessary

--- a/html/popup.html
+++ b/html/popup.html
@@ -112,16 +112,13 @@
                     </div>
                 </div>
                 <div class='currency-section dtube'>
-                    <div class="wallet_currency" id="wallet_sp">DTC</div>
-                    <div class="dropdown">
-                        <div id="send_dtc"><img src="../images/delegate.png" />Send</div>
-                    </div>
+                    <div class="wallet_currency" id="wallet_dtc">DTC</div>
                 </div>
             </div>
 
-            <div class="dropdown">
+            <div class="dropdown steem">
             </div>
-            <div class="dropdown">
+            <div class="dropdown steem">
             </div>
         </div>
         <div id="account_value" >
