--- a/html/popup.html
+++ b/html/popup.html
@@ -139,6 +139,12 @@
             trades, transfers, or transactions.
         </div>
     </div>
+    <div id="estimation_info_dtube">
+        <div class="back_menu back_enabled">DTube account value</div>
+        <div>
+            DTC are currently in testnet and not worth anything.
+        </div>
+    </div>
     <div id="acc_transfers">
         <div class="back_menu back_enabled">Wallet History</div>
         <div id="transfer_rows"></div>
