add account management dtube

--- a/html/popup.html
+++ b/html/popup.html
@@ -313,23 +313,30 @@
             <select>
           </select>
         </div>
-        <div class="keys_info">
+        <div class="keys_info steem">
             <span class="keys_info_type">POSTING KEY</span>
             <span id="posting" class="remove_key">REMOVE</span>
             <div class="private_key"></div>
             <div class="public_key"></div>
             <div class="img_add_key"></div>
         </div>
-        <div class="keys_info">
+        <div class="keys_info steem">
             <span class="keys_info_type">ACTIVE KEY</span>
             <span id="active" class="remove_key">REMOVE</span>
             <div class="private_key"></div>
             <div class="public_key"></div>
             <div class="img_add_key"></div>
         </div>
-        <div class="keys_info">
+        <div class="keys_info steem">
             <span class="keys_info_type">MEMO KEY</span>
             <span id="memo" class="remove_key">REMOVE</span>
+            <div class="private_key"></div>
+            <div class="public_key"></div>
+            <div class="img_add_key"></div>
+        </div>
+        <div class="keys_info dtube">
+            <span class="keys_info_type">KEY</span>
+            <span class="remove_key"></span>
             <div class="private_key"></div>
             <div class="public_key"></div>
             <div class="img_add_key"></div>
