DTube test page ready

--- a/example/main.html
+++ b/example/main.html
@@ -138,6 +138,48 @@
     <input type="text" placeholder="username" id="pd_username" />
     <input type="number" placeholder="sp" id="pd_sp" />
     <button id="send_pd">Send</button>
+    <h2>DTube</h2>
+    <h3>Create Account</h3>
+    <input type="text" placeholder="username" id="d_username_create" />
+    <input type="text" placeholder="publickey" id="d_key_create" />
+    <button id="d_send_create">Send</button>
+    <h3>Leader Vote</h3>
+    <input type="text" placeholder="username" id="d_username_leader" />
+    <input type="text" placeholder="leader" id="d_leader" />
+    <input type="checkbox" id="d_leader_approve" /><label for="d_leader_approve">Approve?</label>
+    <button id="d_send_leader">Send</button>
+    <h3>Transfer</h3>
+    <input type="text" placeholder="username" id="d_username_transfer" />
+    <input type="text" placeholder="recipient" id="d_recipient_transfer" />
+    <input type="number" placeholder="amount" id="d_amt_transfer" />
+    <input type="text" placeholder="memo" id="d_memo_transfer" />
+    <button id="d_send_transfer">Send</button>
+    <h3>Comment</h3>
+    <input type="text" placeholder="username" id="d_username_comment" />
+    <input type="text" placeholder="pa" id="d_pa_comment" />
+    <input type="text" placeholder="pp" id="d_pp_comment" />
+    <input type="text" placeholder="permlink" id="d_perm_comment" />
+    <input type="text" placeholder="json" id="d_json_comment" />
+    <input type="text" placeholder="tag" id="d_tag_comment" />
+    <input type="number" placeholder="vote" id="d_vote_comment" />
+    <input type="number" placeholder="burn" id="d_burn_comment" />
+    <button id="d_send_comment">Send</button>
+    <h3>Vote</h3>
+    <input type="text" placeholder="username" id="d_username_vote" />
+    <input type="text" placeholder="author" id="d_author_vote" />
+    <input type="text" placeholder="permlink" id="d_perm_vote" />
+    <input type="text" placeholder="tag" id="d_tag_vote" />
+    <input type="number" placeholder="weight" id="d_weight_vote" />
+    <button id="d_send_vote">Send</button>
+    <h3>Follow</h3>
+    <input type="text" placeholder="username" id="d_username_follow" />
+    <input type="text" placeholder="dtuber" id="d_dtuber_follow" />
+    <input type="checkbox" id="d_follow" /><label for="d_follow">Follow?</label>
+    <button id="d_send_follow">Send</button>
+    <h3>Json</h3>
+    <input type="text" placeholder="username" id="d_username_json" />
+    <input type="text" placeholder="json" id="d_json" />
+    <button id="d_send_json">Send</button>
 
     <script src="./jquery.js"></script>
     <script src="main.js?v=a"></script>
