add DTube vote leader

--- a/html/dialog.html
+++ b/html/dialog.html
@@ -94,7 +94,7 @@
                 <h3 class="dTubeLeader">Leader </h3>
                 <div class="witnessVote dTubeLeader" id="witness"></div>
                 <h3 class="witnessVote dTubeLeader">Vote </h3>
-                <div class="witnessVote" id="voteWit"></div>
+                <div class="witnessVote dTubeLeader" id="voteWit"></div>
             </div>
         </div>
         <div id="confirm_footer">
