--- a/html/popup.html
+++ b/html/popup.html
@@ -699,6 +699,7 @@
     <script src="../js/popup/com.js"></script>
     <script src="../js/popup/rpc.js"></script>
     <script src="../js/popup/accounts.js"></script>
+    <script src="../js/dtube_wrapper.js"></script>
     <script src="../js/popup/utils.js"></script>
     <script src="../js/popup/navigation.js"></script>
     <script src="../js/popup/settings.js"></script>
