Add Vote Transfert JSON and Follow DTube

--- a/html/dialog.html
+++ b/html/dialog.html
@@ -41,19 +41,21 @@
                 <div class="decode vote post custom delegation addAccountAuthority removeAccountAuthority broadcast signBuffer signedCall witnessVote powerUp powerDown dTubeNewAccount dTubeLeader dTubeVote dTubeComment dTubeTransfer dTubeJson dTubeFollow" id="username"></div>
                 <h3 class="decode dTubeNewAccount">Key</h3>
                 <div class="decode dTubeNewAccount" id="wif"></div>
-                <h3 class="vote">Author</h3>
-                <div class="vote" id="author"></div>
+                <h3 class="dTubeFollow">DTuber</h3>
+                <div class="dTubeFollow" id="dtuber"></div>
+                <h3 class="vote dTubeVote">Author</h3>
+                <div class="vote dTubeVote" id="author"></div>
                 <h3 class="addAccountAuthority removeAccountAuthority">Authorized Account</h3>
                 <div class="addAccountAuthority removeAccountAuthority" id="authorized_account"></div>
                 <h3 class="addAccountAuthority removeAccountAuthority">Role</h3>
                 <div class="addAccountAuthority removeAccountAuthority" id="role"></div>
-                <h3 class="vote">Permlink</h3>
-                <div class="vote" id="perm"></div>
-                <h3 class="vote addAccountAuthority">Weight</h3>
-                <div class="vote addAccountAuthority" id="weight"></div>
+                <h3 class="vote dTubeVote">Permlink</h3>
+                <div class="vote dTubeVote" id="perm"></div>
+                <h3 class="vote addAccountAuthority dTubeVote">Weight</h3>
+                <div class="vote addAccountAuthority dTubeVote" id="weight"></div>
                 <h3 class="custom broadcast signedCall">Key</h3>
                 <div class="custom broadcast signedCall" id="custom_key"></div>
-                <h3 class="custom broadcast signedCall createClaimedAccount" id="custom_data">Data <span class="small">(click to show)</span></h3>
+                <h3 class="custom broadcast signedCall createClaimedAccount dTubeJson" id="custom_data">Data <span class="small">(click to show)</span></h3>
                 <div class="" id="custom_json">
                     <div></div>
                     <div></div>
