newAccount creation DTube

--- a/example/main.html
+++ b/example/main.html
@@ -141,6 +141,7 @@
     <h2>DTube</h2>
     <h3>Create Account</h3>
     <input type="text" placeholder="username" id="d_username_create" />
+    <input type="text" placeholder="new user" id="d_new_account_create" />
     <input type="text" placeholder="publickey" id="d_key_create" />
     <button id="d_send_create">Send</button>
     <h3>Leader Vote</h3>
